--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -24,7 +24,8 @@
 @import url("responsive.css");       /* Media queries responsive */
 @import url("cta.css");            /* Call to Action Section */
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Poppins:wght@300;400;500;600;700&display=swap');
-
+@import url("form.css");             /* Form styles */
+@import url("faq.css");              /* FAQ styles */
 
 /*
   NOTES D'UTILISATION :
