--- a/stylesheets/variables.css
+++ b/stylesheets/variables.css
@@ -19,7 +19,7 @@
 
     --text-medium: #64748B;
     --bg-white: #FFFFFF;
-    --border-color: #E2E8F0;
+    --border-color: #000000;
     --success-color: #10B981;
 
     /* Gradients */
