--- a/stylesheets/sections.css
+++ b/stylesheets/sections.css
@@ -229,7 +229,7 @@
 }
 
 /* Features premium */
-.feature-item.premium .feature-bullet {
+/* .feature-item.premium .feature-bullet {
     background: var(--secondary-color);
 }
 
@@ -243,7 +243,7 @@
     font-size: var(--font-size-sm);
     line-height: 1.5;
     font-weight: 500;
-}
+} */
 
 /* ===== PACK FOOTER ===== */
 .pack-footer {
