modif contenu section why chose us

--- a/stylesheets/buttons.css
+++ b/stylesheets/buttons.css
@@ -81,7 +81,8 @@
 .btn-secondary {
     background: transparent;
     color: var(--primary-color);
-    border-color: var(--primary-color);
+    border: 1px solid !important;
+    border-color: var(--gradient-primary);
 }
 
 .btn-secondary:hover {
