--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -32,7 +32,7 @@
 .logo-img {
     height: 70px;
     width: auto;
-    /* object-fit: contain; */
+    object-fit: contain;
     transition: var(--transition);
 }
 
