--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -103,6 +103,7 @@
 .form-select:focus,
 .form-textarea:focus {
     outline: none;
+    color: var(--text-dark);
     border-color: var(--primary-color);
     box-shadow: 0 0 0 3px rgba(212, 165, 116, 0.1);
 }
@@ -126,6 +127,7 @@
 
 .form-select {
     cursor: pointer;
+    color: var(--text-dark);
     appearance: none;
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%231a1a1a' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
     background-repeat: no-repeat;
