--- a/stylesheets/variables.css
+++ b/stylesheets/variables.css
@@ -30,6 +30,7 @@
     --font-size-5xl: 3rem;
 
     /* Spacing */
+    --spacing-xxs: 0.25rem;
     --spacing-xs: 0.5rem;
     --spacing-sm: 0.75rem;
     --spacing-base: 1rem;
