page plan du site et fix logo navbar redirection index

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -27,6 +27,7 @@
 @import url("form.css");             /* Form styles */
 @import url("faq.css");              /* FAQ styles */
 @import url("mentions-legales.css"); /* Mentions légales styles */
+@import url("plan-du-site.css");     /* Plan du site styles */
 
 /*
   NOTES D'UTILISATION :
