enlever decoration sur telephone footer mobile avec balise meta

--- a/stylesheets/footer.css
+++ b/stylesheets/footer.css
@@ -91,9 +91,8 @@
 }
 
 .contact-item span {
-    color: #94A3B8 !important;
+    color: #94A3B8;
     line-height: 1.5;
-    text-decoration: none !important;
 }
 
 .footer-bottom {
