--- a/stylesheets/hero.css
+++ b/stylesheets/hero.css
@@ -146,6 +146,16 @@
     animation: fadeInUp 0.8s ease-out 0.4s forwards;
 }
 
+@font-face {
+    font-family: 'Dream Avenue';
+    src: url('../fonts/Dream-Avenue.ttf') format('truetype');
+}
+
+.dream {
+    font-family: 'Dream Avenue', sans-serif;
+    font-size: 2rem;
+}
+
 .hero-buttons {
     display: flex;
     gap: 1.5rem;
